@@ -17,19 +17,18 @@
 
 package org.apache.hive.service.cli.operation;
 
-import java.util.Arrays;
-import java.util.Collection;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
-import com.google.common.collect.ArrayListMultimap;
-import com.google.common.collect.Iterables;
-import com.google.common.collect.Multimap;
 import org.apache.hadoop.hive.metastore.TableType;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+
+import org.apache.spark.internal.SparkLogger;
+import org.apache.spark.internal.SparkLoggerFactory;
+import org.apache.spark.internal.LogKeys;
+import org.apache.spark.internal.MDC;
 
 /**
  * ClassicTableTypeMapping.
@@ -40,7 +39,7 @@ import org.slf4j.LoggerFactory;
  */
 public class ClassicTableTypeMapping implements TableTypeMapping {
 
-  private static final Logger LOG = LoggerFactory.getLogger(ClassicTableTypeMapping.class);
+  private static final SparkLogger LOG = SparkLoggerFactory.getLogger(ClassicTableTypeMapping.class);
 
   public enum ClassicTableTypes {
     TABLE,
@@ -49,7 +48,7 @@ public class ClassicTableTypeMapping implements TableTypeMapping {
   }
 
   private final Map<String, String> hiveToClientMap = new HashMap<String, String>();
-  private final Multimap<String, String> clientToHiveMap = ArrayListMultimap.create();
+  private final Map<String, List<String>> clientToHiveMap = new HashMap<>();
 
   public ClassicTableTypeMapping() {
     hiveToClientMap.put(TableType.MANAGED_TABLE.name(), ClassicTableTypes.TABLE.name());
@@ -58,28 +57,31 @@ public class ClassicTableTypeMapping implements TableTypeMapping {
     hiveToClientMap.put(TableType.MATERIALIZED_VIEW.toString(),
             ClassicTableTypes.MATERIALIZED_VIEW.toString());
 
-    clientToHiveMap.putAll(ClassicTableTypes.TABLE.name(), Arrays.asList(
-        TableType.MANAGED_TABLE.name(), TableType.EXTERNAL_TABLE.name()));
-    clientToHiveMap.put(ClassicTableTypes.VIEW.name(), TableType.VIRTUAL_VIEW.name());
+    clientToHiveMap.put(ClassicTableTypes.TABLE.name(),
+        List.of(TableType.MANAGED_TABLE.name(), TableType.EXTERNAL_TABLE.name()));
+    clientToHiveMap.put(ClassicTableTypes.VIEW.name(),
+        List.of(TableType.VIRTUAL_VIEW.name()));
     clientToHiveMap.put(ClassicTableTypes.MATERIALIZED_VIEW.toString(),
-            TableType.MATERIALIZED_VIEW.toString());
+        List.of(TableType.MATERIALIZED_VIEW.toString()));
   }
 
   @Override
   public String[] mapToHiveType(String clientTypeName) {
-    Collection<String> hiveTableType = clientToHiveMap.get(clientTypeName.toUpperCase());
+    List<String> hiveTableType = clientToHiveMap.get(clientTypeName.toUpperCase());
     if (hiveTableType == null) {
-      LOG.warn("Not supported client table type " + clientTypeName);
+      LOG.warn("Not supported client table type {}",
+        MDC.of(LogKeys.TABLE_TYPE, clientTypeName));
       return new String[] {clientTypeName};
     }
-    return Iterables.toArray(hiveTableType, String.class);
+    return hiveTableType.toArray(new String[0]);
   }
 
   @Override
   public String mapToClientType(String hiveTypeName) {
     String clientTypeName = hiveToClientMap.get(hiveTypeName);
     if (clientTypeName == null) {
-      LOG.warn("Invalid hive table type " + hiveTypeName);
+      LOG.warn("Invalid hive table type {}",
+        MDC.of(LogKeys.TABLE_TYPE, hiveTypeName));
       return hiveTypeName;
     }
     return clientTypeName;
